--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "jade": "*",
     "less-middleware": "~0.2.1-beta",
     "mongoskin": "~1.3.20"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.3.x"
   }
 }
