--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
     "express": "3.4.7",
     "jade": "*",
     "less-middleware": "~0.2.1-beta",
-    "mongoskin": "~1.3.20"
+    "mongoskin": "~1.3.20",
+    "grunt": "~0.4.5",
+    "load-grunt-tasks": "~0.4.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-autoprefixer": "~0.7.3",
+    "grunt-contrib-compass": "~0.7.2",
+    "grunt-concurrent": "~0.5.0",
+    "grunt-csso": "~0.6.1",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-csscomb": "~2.0.1",
+    "grunt-contrib-concat": "~0.4.0"
   },
   "engines": {
     "node": "0.10.x",
